--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
+        <title>Template HTML/CSS/JS</title>
 
         <!-- BOOTSTRAP CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -21,23 +21,26 @@
     </head>
     <body>
 
-        <!-- header -->
-        <header>
-                HEADER
-        </header>
-        <!-- /header -->
+        <div id="app">
 
-        <!-- main -->
-        <main>
-                MAIN
-        </main>
-        <!-- /main -->
+            <!-- header -->
+            <header>
+                    <h1>HEADER</h1>
+            </header>
+            <!-- /header -->
 
-        <!-- footer -->
-        <footer>      
-                FOOTER     
-        </footer>
-        <!-- /footer -->
+            <!-- main -->
+            <main>
+                    {{ message }}
+            </main>
+            <!-- /main -->
+
+            <!-- footer -->
+            <footer>      
+                    FOOTER     
+            </footer>
+            <!-- /footer -->
+        </div>
 
         <!-- JS -->
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
